First prototype preparation